--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "André Tavares",
   "engines": {
-    "node": "4.2.5",
+    "node": "4.6.0",
     "npm": "3.5.3"
   },
   "dependencies": {
@@ -26,19 +26,22 @@
     "expose-loader": "0.7.0",
     "express": "4.13.3",
     "file-loader": "0.8.4",
-    "fluxible": "0.5.7",
-    "fluxible-addons-react": "0.1.8",
+    "fluxible": "^1.2.0",
+    "fluxible-addons-react": "^0.2.9",
     "formsy-react": "^0.19.2",
     "intl": "1.1.0",
     "intl-locales-supported": "1.0.0",
+    "keymirror": "^0.1.1",
     "lodash": "^4.17.4",
     "marked": "^0.3.5",
     "moment": "^2.13.0",
     "node-sass": "3.3.2",
-    "react": "15.0.0",
-    "react-ga": "1.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-ga": "^2.1.2",
     "react-intl": "1.2.2",
-    "react-router": "0.13.3",
+    "react-router": "3.0.2",
+    "react-router-dom": "^4.0.0-beta.6",
     "react-tokeninput": "^2.2.2",
     "sass-loader": "2.0.1",
     "serialize-javascript": "1.2.0",
