--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf static/dist && webpack --stats --progress --config ./webpack/prod.config.js",
+    "build": "rm -rf static/dist && webpack --progress --noInfo --quiet --config ./webpack/prod.config.js",
     "dev": "NODE_ENV=development DEBUG=nicistore node index",
     "prod": "NODE_ENV=production DEBUG=nicistore node index"
   },
@@ -24,7 +24,7 @@
     "css-loader": "0.18.0",
     "debug": "2.2.0",
     "expose-loader": "0.7.0",
-    "express": "4.13.3",
+    "express": "^4.14.1",
     "file-loader": "0.8.4",
     "fluxible": "^1.2.0",
     "fluxible-addons-react": "^0.2.9",
@@ -39,19 +39,28 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-ga": "^2.1.2",
-    "react-intl": "1.2.2",
+    "react-intl": "^2.2.3",
     "react-router": "3.0.2",
     "react-router-dom": "^4.0.0-beta.6",
     "react-tokeninput": "^2.2.2",
     "sass-loader": "2.0.1",
     "serialize-javascript": "1.2.0",
+    "serve-favicon": "^2.4.0",
     "style-loader": "0.12.4",
     "superagent": "1.8.3"
   },
   "devDependencies": {
-    "autoprefixer-loader": "3.1.0",
     "babel-core": "5.8.38",
     "babel-loader": "5.4.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-decorators": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.23.0",
     "babel-runtime": "5.8.38",
     "extract-text-webpack-plugin": "1.0.1",
     "strip-loader": "0.1.2",
