--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "babel-core": "5.8.38",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "5.4.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -62,6 +63,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
     "babel-runtime": "5.8.38",
+    "eslint": "^3.16.1",
     "extract-text-webpack-plugin": "1.0.1",
     "strip-loader": "0.1.2",
     "webpack": "1.12.15",
